# klang-universum

./: .gitignore  .last_build_id  .vercelignore  PLAN.md  README.md  analysis_options.yaml  build  flutter_bootstrap.js  index.html  manifest.json  privacy.html  pubspec.yaml  vercel.json  version.json
.github/workflows/: aec-native.yml  ci.yml  deploy.yml  ios-release.yml  pages.yml  screenshots.yml
assets/: AssetManifest.bin.json  FontManifest.json  NOTICES
bench/: README.md  ab_vs_glint.py  glint_quant.cpp  glint_ref.cpp  glint_stream.cpp  oracle_tests.py
canvaskit/: canvaskit.js.symbols  skwasm.js.symbols  skwasm_heavy.js.symbols  wimp.js.symbols
canvaskit/chromium/: canvaskit.js.symbols
docs/: AEC_TIER3B.md  CORPUS_LICENSING.md  DAW_SCOPING.md  FDN_REVERB_SPEC.md  FX_HANDOVER.md  GLINT_VORBIS_HANDOVER.md  HISTORY.md  LIBRARIES_AND_TAB_SCOPING.md  LOOP_MIXER_FOLLOWUPS_HANDOVER.md  ORACLE.md  PDMX_JSON_TO_MIDI_HANDOVER.md  PLAN.md  REPLAYER_EFFECT_COVERAGE.md  SOUND_LIBRARY_UI_CONTRACT.md  SVC_SITE_B_HANDOVER.md  TABCNN_GGML_HANDBACK.md  TABCNN_ONNX_HANDOVER.md  TAB_ARRANGER_NEURAL_HANDOFF.md  TAB_LABELER_ROADMAP.md  TRACKER_ENGINE_CONTRACTS.md  TRACKER_GUI_HANDOFF_IDEAS.md  TRACKER_HANDOVER.md  TRACKER_IDEAS.md  TRACKER_REPLAYER_HANDOVER.md  TRANSCRIPTION_HANDOFF.md  TRANSCRIPTION_RMVPE_HANDOVER.md  TRANSCRIPTION_SEP_FEASIBILITY.md  TRANSCRIPTION_SEP_HANDOVER.md  TRANSCRIPTION_SOTA_HANDOFF.md  TTS_MACOS.md  TUTORIAL_PRIMERS_HANDOVER.md  WORKSHOP_CRISP_NOTATION_CONTRACTS.md  WORKSHOP_G6_HANDOVER.md  WORKSHOP_NEXT_HANDOVER.md  WORKSHOP_PARITY.md  WORKSHOP_PARTITURA_CONTRACTS.md  WORKSHOP_PLAN.md
glint/: bootstrap.js  glint.mjs  glint.wasm  glint_codec.mjs  glint_vorbis_web.js
integration_test/: app_smoke_test.dart  screenshots_test.dart  workshop_test.dart
ios/Runner/: Info.plist  PrivacyInfo.xcprivacy
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
native/aec/: .gitignore  CMakeLists.txt  LICENSE  README.md  analysis_options.yaml  build.sh  pubspec.yaml
native/aec/LICENSES/: miniaudio.txt
native/aec/android/: build.gradle
native/aec/android/src/main/: AndroidManifest.xml
native/aec/ios/: aec_fullduplex.podspec
native/aec/ios/Classes/: aec_dsp.c  aec_shim.c  miniaudio_impl.c  miniaudio_impl.m
native/aec/lib/: aec_dsp.dart  aec_engine.dart
native/aec/lib/src/: engine_ffi.dart  native_library.dart
native/aec/linux/: CMakeLists.txt
native/aec/macos/: aec_fullduplex.podspec
native/aec/macos/Classes/: aec_dsp.c  aec_shim.c  miniaudio_impl.c
native/aec/src/: CMakeLists.txt  aec_dsp.c  aec_dsp.h  aec_shim.c  aec_shim.h  miniaudio_impl.c
native/aec/test/: aec_engine_test.dart  aec_erle_test.dart
native/aec/test/support/: lib_resolver.dart
native/aec/tool/: live_check.dart
native/aec/windows/: CMakeLists.txt
test/: about_screen_test.dart  accidental_sort_test.dart  advanced_tracker_screen_test.dart  aec_capability_test.dart  aec_offline_test.dart  aec_tune_test.dart  aecmos_smoke_test.dart  articulation_ear_test.dart  articulation_read_test.dart  audio_export_test.dart  audio_import_test.dart  beat_bridge_test.dart  beat_capture_test.dart  beat_runner_test.dart  beat_sort_test.dart  beat_to_tracker_test.dart  bench_arrange_test.dart  biquad_dynamics_test.dart  bowing_test.dart  catalog_browse_sheet_test.dart  cello_play_it_test.dart  cello_test.dart  charades_test.dart  chord_builder_test.dart  chord_chart_test.dart  chord_grip_hero_test.dart  chord_progression_test.dart  chroma_analysis_robustness_test.dart  chroma_analysis_test.dart  clef_change_test.dart  color_scaffold_test.dart  cometbeat_catalog_source_test.dart  command_caller_test.dart  composition_test.dart  composition_workshop_test.dart  concert_pitch_test.dart  connect_line_test.dart  consistency_test.dart  crescendo_ear_test.dart  crescendo_read_test.dart  (+302 more)
test_driver/: integration_test.dart
tool/: bundle_macos_tts.sh  mirror_soundfonts.sh  music_db_fetch_sources.py  music_db_ingest_egset12.py  music_db_ingest_nifc.py  music_db_ingest_openewld.py  music_db_ingest_polish.py  music_db_krn_music21_oracle.py  music_db_krn_parse_sweep.dart  music_db_krn_verovio_oracle.py  music_db_mutopia_life70.py  music_db_openscore_life70.py  music_db_openscore_life70_report.py  music_db_openscore_quarantine.py  music_db_polish_cdt_classify.py  music_db_polish_extract_composers.py  music_db_polish_life70.py  pdmx_ingest_music_db.py  pdmx_json_to_midi.py  pdmx_music_db_enrich_files.py  wikidata_deaths.py
web/: index.html  manifest.json  support.html
(+502 files in other folders)
